version/0.14/_sources/api/solver/_autosummary/settings/solid_diffusion.rst.txt
:orphan:

.. _solid_diffusion:

solid_diffusion
===============

.. autoclass:: ansys.fluent.core.solver.settings_231.solid_diffusion.solid_diffusion

.. rubric:: Attributes

========================   ====================================================

Attribute                                                               Summary

========================   ====================================================
:ref:`option <option_9>`       Select method for calculating material property.

:ref:`value <value>`                                             'value' child.

========================   ====================================================

.. rubric:: Included in:

================================   =================================

Parent                                                       Summary

================================   =================================
:ref:`fluid_child <fluid_child>`       'child_object_type' of fluid.

================================   =================================

