version/0.24/_sources/api/solver/_autosummary/settings/solid_diffusion.rst.txt
:orphan:

.. _solid_diffusion:

solid_diffusion
===============

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.solid_diffusion.solid_diffusion
    :show-inheritance:

.. rubric:: Attributes

=========================   ====================================================

Attribute                                                                Summary

=========================   ====================================================
:ref:`option <option_12>`       Select method for calculating material property.

:ref:`value <value_11>`                     Specify the constant property value.

=========================   ====================================================

.. rubric:: Included in:

======================================   ====================================

Parent                                                                Summary

======================================   ====================================
:ref:`fluid_child <fluid_child>`                'child_object_type' of fluid.

:ref:`material_child <material_child>`       'child_object_type' of material.

======================================   ====================================

